<resources>
    <string name="app_name">Bodyweight Connect</string>
    <string name="title_activity_main2">Bodyweight Connect</string>
    <string name="headline">Select your favorite Sports and Input Device</string>
    <string name="madbarz">Madbarz</string>
    <string name="freeletics">Freeletics</string>
    <string name="flic">Flic</string>
    <string name="voicereg">Voice Reg.</string>
    <string name="choosedevice">Choose Device</string>
    <string name="choosesports">Choose Sports</string>
    <string name="phone">Phone</string>
    <string name="gamepad">Gamepad</string>
    <string name="go">Go</string>
    <string name="title_activity_settings">Settings</string>
    <string name="seekbar_summary">Current value is $1</string>
    <string name="action_settings">Settings</string>
    <string name="action_imprint">Imprint</string>
    <string name="action_terms">Terms</string>
    <string name="action_privacy">Privacy</string>
    <string name="action_back">Back</string>
    <string name="wear">Wear</string>
    <string name="time_in_sec">Time in sec</string>
    <string name="send_position">Send Position</string>
    <string name="area">Area</string>
    <string-array name="map_area">
        <item>1 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>20 km</item>
    </string-array>
    <string name="title_activity_page_manager">PageManagerActivity</string>
    <string name="orderflic"><a href="http://bit.ly/2dVilMP">Order your flic</a> for faster workouts.</string>
    <string name="banner_ad_unit_id">ca-app-pub-5171323585932839/9560459906</string>
    <string name="api_map_key">AIzaSyCB819tumyB2hDC20Ri7mqUARfrG4QgLM4</string>
</resources>
